--- a/app/src/main/res/menu/bottom_nav_menu.xml
+++ b/app/src/main/res/menu/bottom_nav_menu.xml
@@ -1,19 +1,23 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
-
     <item
-        android:id="@+id/navigation_home"
-        android:icon="@drawable/ic_home_black_24dp"
-        android:title="@string/title_home" />
-
+        android:id="@+id/HomeTapFragment"
+        android:title="홈"
+        android:icon="@drawable/ic_home"
+        />
     <item
-        android:id="@+id/navigation_dashboard"
-        android:icon="@drawable/ic_dashboard_black_24dp"
-        android:title="@string/title_dashboard" />
-
+        android:id="@+id/ValuationTapFragment"
+        android:title="상대가치"
+        android:icon="@drawable/ic_valueation"
+        />
     <item
-        android:id="@+id/navigation_notifications"
-        android:icon="@drawable/ic_notifications_black_24dp"
-        android:title="@string/title_notifications" />
-
+        android:id="@+id/CommunityTapFragment"
+        android:title="커뮤니티"
+        android:icon="@drawable/ic_community"
+        />
+    <item
+        android:id="@+id/ProfileTapFragment"
+        android:title="프로필"
+        android:icon="@drawable/ic_mypage"
+        />
 </menu>
