--- a/app/src/main/res/drawable/drawable_view_focused.xml
+++ b/app/src/main/res/drawable/drawable_view_focused.xml
@@ -3,6 +3,6 @@
     android:shape="rectangle">
 
     <solid
-        android:color="@color/colorPrimaryDark"/>
+        android:color="@color/purple_200"/>
 
 </shape>
