--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,4 +7,10 @@
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="main_color">#2e4887</color>
+    <color name="hint_color">#38333333</color>
+    <color name="fragment_background">#f9f9f9</color>
+    <color name="not_selected_color">#CACACA</color>
+    <color name="main_color_15p">#262e4887</color>
+
 </resources>
