--- a/app/src/main/res/layout/fragment_search.xml
+++ b/app/src/main/res/layout/fragment_search.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/white"
     android:paddingHorizontal="10dp">
 
     <EditText
@@ -46,8 +47,8 @@
         android:layout_marginBottom="10dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintTop_toBottomOf="@id/search_et"
-        android:background="@color/fragment_background"
-        tools:listitem="@layout/item_post_recycler_unused" />
+        android:background="@color/white"
+        tools:listitem="@layout/fragment_post" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
