--- a/app/src/main/res/layout/item_indicator_recycler.xml
+++ b/app/src/main/res/layout/item_indicator_recycler.xml
@@ -19,7 +19,7 @@
         android:layout_height="51.7dp">
 
         <TextView
-            android:id="@+id/stockName"
+            android:id="@+id/test_password"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="16.1dp"
@@ -45,8 +45,8 @@
             android:textColor="#8c7e1717"
             android:textSize="10sp"
             android:textStyle="bold"
-            app:layout_constraintLeft_toLeftOf="@id/stockName"
-            app:layout_constraintTop_toBottomOf="@id/stockName" />
+            app:layout_constraintLeft_toLeftOf="@id/test_password"
+            app:layout_constraintTop_toBottomOf="@id/test_password" />
 
         <TextView
             android:id="@+id/pbr"
@@ -60,7 +60,7 @@
             android:textSize="10sp"
             android:textStyle="bold"
             app:layout_constraintLeft_toRightOf="@id/per"
-            app:layout_constraintTop_toBottomOf="@id/stockName" />
+            app:layout_constraintTop_toBottomOf="@id/test_password" />
 
         <TextView
             android:id="@+id/psr"
@@ -74,7 +74,7 @@
             android:textSize="10sp"
             android:textStyle="bold"
             app:layout_constraintLeft_toRightOf="@id/pbr"
-            app:layout_constraintTop_toBottomOf="@id/stockName" />
+            app:layout_constraintTop_toBottomOf="@id/test_password" />
 
         <TextView
             android:id="@+id/image"
