--- a/app/src/main/res/layout/bottom_sheet_dialog_login_check.xml
+++ b/app/src/main/res/layout/bottom_sheet_dialog_login_check.xml
@@ -19,7 +19,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        tools:text="서비스 이용을 위해" />
+        android:text="서비스 이용을 위해" />
 
     <TextView
         android:id="@+id/login_check_tv2"
@@ -29,7 +29,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/login_check_tv1"
-        tools:text="로그인이 필요합니다." />
+        android:text="로그인이 필요합니다." />
 
     <TextView
         android:id="@+id/tv_yes"
