--- a/app/src/main/res/layout/fragment_profile_tab.xml
+++ b/app/src/main/res/layout/fragment_profile_tab.xml
@@ -135,6 +135,7 @@
             android:background="@color/white">
 
             <TextView
+                android:id="@+id/notion_button_tv"
                 style="@style/Text.MainColorFont"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
