--- a/app/src/main/res/values/style.xml
+++ b/app/src/main/res/values/style.xml
@@ -28,4 +28,11 @@
         <item name="android:textSize">13.3sp</item>
     </style>
 
+    <style name="BasicDialogStyle">
+        <item name="android:windowIsFloating">true</item>
+        <item name="android:windowAnimationStyle">@android:style/Animation.Dialog</item>
+        <item name="android:backgroundDimEnabled">true</item>
+        <item name="android:background">@android:color/transparent</item>
+    </style>
+
 </resources>
