--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -46,5 +46,17 @@
         android:label="@string/HomeTapFragment"
         tools:layout="@layout/fragment_post"
         />
+    <fragment
+        android:id="@+id/NotionFragment"
+        android:name="com.miggle.miggle.NotionFragment"
+        android:label="@string/NotionFragment"
+        tools:layout="@layout/fragment_notion"
+        />
+    <fragment
+        android:id="@+id/PreferencesFragment"
+        android:name="com.miggle.miggle.ui.profile.PreferencesFragment"
+        android:label="@string/PreferencesFragment"
+        tools:layout="@layout/fragment_preferences"
+        />
 
 </navigation>
