--- a/app/src/main/res/layout/appbar.xml
+++ b/app/src/main/res/layout/appbar.xml
@@ -22,10 +22,10 @@
 
     <ImageView
         android:id="@+id/appbar_search_button"
-        android:layout_width="27dp"
-        android:layout_height="27dp"
+        android:layout_width="25dp"
+        android:layout_height="25dp"
         android:background="@drawable/ic_search"
-        android:backgroundTint="@color/black"
+        android:backgroundTint="@color/main_color"
         app:layout_constraintTop_toTopOf="parent"
         android:layout_marginRight="20dp"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -33,22 +33,22 @@
 
     <ImageView
         android:id="@+id/appbar_setting_button"
-        android:layout_width="25.4dp"
-        android:layout_height="25.4dp"
-        android:layout_marginEnd="29.5dp"
+        android:layout_width="26dp"
+        android:layout_height="26dp"
+        android:layout_marginEnd="15dp"
         android:background="@drawable/ic_setting"
-        android:visibility="gone"
+        android:backgroundTint="@color/main_color"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
     <ImageView
         android:id="@+id/appbar_bell_button"
-        android:layout_width="27dp"
-        android:layout_height="27dp"
+        android:layout_width="25dp"
+        android:layout_height="25dp"
         android:layout_marginEnd="15dp"
         android:background="@drawable/ic_bell"
-        android:backgroundTint="@color/black"
+        android:backgroundTint="@color/main_color"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
