--- a/app/src/main/res/drawable/shape_round_18dp_2e4887_1dp.xml
+++ b/app/src/main/res/drawable/shape_round_18dp_2e4887_1dp.xml
@@ -3,6 +3,7 @@
     <item android:state_pressed="false">
         <shape>
             <!--테두리 색-->
+            <solid android:color="@color/white"/>
             <stroke android:width="1dp" android:color="@color/main_color" />
             <corners android:radius="18.7dp" />
         </shape>
