--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -73,11 +73,12 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="10dp"
-
+            android:buttonTint="@color/black"
             app:layout_constraintLeft_toLeftOf="@id/et_pw"
             app:layout_constraintTop_toBottomOf="@id/login_button" />
 
         <TextView
+            style="@style/Text.BlackFont"
             android:id="@+id/auto_login_text"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -87,6 +88,7 @@
             app:layout_constraintTop_toTopOf="@id/auto_login_checkBox" />
 
         <TextView
+            android:id="@+id/login_search_password"
             style="@style/Text.BlackFont"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -124,7 +126,7 @@
             android:layout_marginTop="10dp"
             android:layout_marginEnd="10dp"
             android:text="미글이 처음이신가요?"
-            android:textSize="13.3sp"
+            style="@style/Text.MainColorFont"
             app:layout_constraintHorizontal_chainStyle="packed"
             app:layout_constraintLeft_toLeftOf="@id/login_constraintLayout1"
             app:layout_constraintRight_toLeftOf="@id/login_signup"
