--- a/app/src/main/res/layout/fragment_profile_edit.xml
+++ b/app/src/main/res/layout/fragment_profile_edit.xml
@@ -2,65 +2,244 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:background="@color/fragment_background">
 
-    <androidx.constraintlayout.widget.ConstraintLayout
-        android:id="@+id/profile_appbar_constraint"
+    <include
+        android:id="@+id/profile_edit_appbar"
+        layout="@layout/appbar"
         android:layout_width="match_parent"
-        android:layout_height="?attr/actionBarSize"
-        app:layout_constraintTop_toTopOf="parent">
+        android:layout_height="wrap_content" />
 
-        <TextView
-            android:id="@+id/profile_appbar_text"
-            style="@style/Text.BlackFont"
+    <androidx.cardview.widget.CardView
+        android:id="@+id/preferences_title_card"
+        android:layout_width="311.3dp"
+        android:layout_height="49.6dp"
+        android:layout_marginTop="35.2dp"
+        app:cardCornerRadius="25dp"
+        app:cardElevation="3.3dp"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/profile_edit_appbar">
+
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:id="@+id/preferences_title_constraint"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:gravity="center"
-            android:text="개인정보 설정"
-            android:textSize="20sp" />
+            android:background="@drawable/gradient_button_color">
 
-    </androidx.constraintlayout.widget.ConstraintLayout>
+            <TextView
+                style="@style/Text.WhiteFont"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="내정보"
+                android:textSize="16.7sp"
+                app:layout_constraintBottom_toBottomOf="@id/preferences_title_constraint"
+                app:layout_constraintLeft_toLeftOf="@id/preferences_title_constraint"
+                app:layout_constraintRight_toRightOf="@id/preferences_title_constraint"
+                app:layout_constraintTop_toTopOf="@id/preferences_title_constraint" />
 
-    <ImageView
-        android:id="@+id/profile_image"
-        android:layout_width="100dp"
-        android:layout_height="100dp"
-        android:layout_marginTop="15dp"
-        android:background="@drawable/gradient_button_color"
+        </androidx.constraintlayout.widget.ConstraintLayout>
+    </androidx.cardview.widget.CardView>
+
+    <androidx.cardview.widget.CardView
+        android:id="@+id/preferences_myInfo_card"
+        android:layout_width="311.3dp"
+        android:layout_height="31.7dp"
+        android:layout_marginTop="16.9dp"
+        app:cardBackgroundColor="@color/white"
+        app:cardCornerRadius="15dp"
+        app:cardElevation="2dp"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/profile_appbar_constraint" />
+        app:layout_constraintTop_toBottomOf="@id/preferences_title_card">
 
-    <TextView
-        android:id="@+id/profile_image_change_button"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="10dp"
-        android:text="프로필 사진 변경"
-        android:textColor="#3F51B5"
-        android:textSize="15sp"
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:id="@+id/preferences_info_setting_constraint"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:background="@color/white">
+
+            <TextView
+                android:id="@+id/my_page_info_setting"
+                style="@style/Text.BlackFont"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="이메일"
+                app:layout_constraintBottom_toBottomOf="@id/preferences_info_setting_constraint"
+                app:layout_constraintLeft_toLeftOf="@id/preferences_info_setting_constraint"
+                app:layout_constraintRight_toRightOf="@id/preferences_info_setting_constraint"
+                app:layout_constraintTop_toTopOf="@id/preferences_info_setting_constraint" />
+
+
+        </androidx.constraintlayout.widget.ConstraintLayout>
+    </androidx.cardview.widget.CardView>
+
+    <androidx.cardview.widget.CardView
+        android:id="@+id/preferences_nickname_card"
+        android:layout_width="311.3dp"
+        android:layout_height="31.7dp"
+        android:layout_marginTop="16.9dp"
+        app:cardBackgroundColor="@color/white"
+        app:cardCornerRadius="15dp"
+        app:cardElevation="2dp"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/profile_image" />
+        app:layout_constraintTop_toBottomOf="@id/preferences_myInfo_card">
 
-    <TextView
-        android:id="@+id/profile_nickname_tv"
-        style="@style/Text.BlackFont"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="닉네임"
-        android:layout_marginStart="20dp"
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:id="@+id/preferences_nickname_constraint"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:background="@color/white">
+
+            <TextView
+                style="@style/Text.BlackFont"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="닉네임"
+                app:layout_constraintBottom_toBottomOf="@id/preferences_nickname_constraint"
+                app:layout_constraintLeft_toLeftOf="@id/preferences_nickname_constraint"
+                app:layout_constraintRight_toRightOf="@id/preferences_nickname_constraint"
+                app:layout_constraintTop_toTopOf="@id/preferences_nickname_constraint" />
+        </androidx.constraintlayout.widget.ConstraintLayout>
+    </androidx.cardview.widget.CardView>
+
+    <androidx.cardview.widget.CardView
+        android:id="@+id/preferences_current_password"
+        android:layout_width="311.3dp"
+        android:layout_height="31.7dp"
+        android:layout_marginTop="16.9dp"
+        app:cardBackgroundColor="@color/white"
+        app:cardCornerRadius="15dp"
+        app:cardElevation="2dp"
         app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/profile_image_change_button" />
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/preferences_nickname_card">
 
-    <EditText
-        android:id="@+id/profile_nickname_et"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginHorizontal="20dp"
-        android:layout_marginTop="10dp"
-        app:layout_constraintTop_toBottomOf="@id/profile_nickname_tv"
-        android:background="@drawable/shape_round_5dp_aaa_1dp"
-        />
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:id="@+id/preferences_current_password_constraint"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:background="@color/white">
+
+            <EditText
+                style="@style/Text.BlackFont"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:background="@color/white"
+                android:gravity="center"
+                android:hint="현재 비밀번호"
+                android:textColorHint="@color/appbar_icon_color"
+                app:layout_constraintBottom_toBottomOf="@id/preferences_current_password_constraint"
+                app:layout_constraintLeft_toLeftOf="@id/preferences_current_password_constraint"
+                app:layout_constraintRight_toRightOf="@id/preferences_current_password_constraint"
+                app:layout_constraintTop_toTopOf="@id/preferences_current_password_constraint" />
+
+        </androidx.constraintlayout.widget.ConstraintLayout>
+    </androidx.cardview.widget.CardView>
+
+    <androidx.cardview.widget.CardView
+        android:id="@+id/preferences_new_password"
+        android:layout_width="311.3dp"
+        android:layout_height="31.7dp"
+        android:layout_marginTop="16.9dp"
+        app:cardBackgroundColor="@color/white"
+        app:cardCornerRadius="15dp"
+        app:cardElevation="2dp"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/preferences_current_password">
+
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:id="@+id/preferences_new_password_constraint"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:background="@color/white">
+
+            <EditText
+                style="@style/Text.BlackFont"
+                android:layout_width="match_parent"
+
+                android:layout_height="wrap_content"
+                android:background="@color/white"
+                android:gravity="center"
+                android:hint="새 비밀번호"
+                android:textColorHint="@color/appbar_icon_color"
+                app:layout_constraintBottom_toBottomOf="@id/preferences_new_password_constraint"
+                app:layout_constraintLeft_toLeftOf="@id/preferences_new_password_constraint"
+                app:layout_constraintRight_toRightOf="@id/preferences_new_password_constraint"
+                app:layout_constraintTop_toTopOf="@id/preferences_new_password_constraint" />
+
+        </androidx.constraintlayout.widget.ConstraintLayout>
+    </androidx.cardview.widget.CardView>
+
+    <androidx.cardview.widget.CardView
+        android:id="@+id/preferences_new_password_confirm"
+        android:layout_width="311.3dp"
+        android:layout_height="31.7dp"
+        android:layout_marginTop="16.9dp"
+        app:cardBackgroundColor="@color/white"
+        app:cardCornerRadius="15dp"
+        app:cardElevation="2dp"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/preferences_new_password">
+
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:id="@+id/preferences_new_password_confirm_constraint"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:background="@color/white">
+
+            <EditText
+                style="@style/Text.BlackFont"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:background="@color/white"
+                android:gravity="center"
+                android:hint="새 비밀번호 확인"
+                android:textColorHint="@color/appbar_icon_color"
+                app:layout_constraintBottom_toBottomOf="@id/preferences_new_password_confirm_constraint"
+                app:layout_constraintLeft_toLeftOf="@id/preferences_new_password_confirm_constraint"
+                app:layout_constraintRight_toRightOf="@id/preferences_new_password_confirm_constraint"
+                app:layout_constraintTop_toTopOf="@id/preferences_new_password_confirm_constraint" />
+
+        </androidx.constraintlayout.widget.ConstraintLayout>
+    </androidx.cardview.widget.CardView>
+
+
+    <androidx.cardview.widget.CardView
+        android:id="@+id/preferences_revoke_card"
+        android:layout_width="311.3dp"
+        android:layout_height="31.7dp"
+        android:layout_marginTop="16.9dp"
+        app:cardBackgroundColor="@color/white"
+        app:cardCornerRadius="15dp"
+        app:cardElevation="2dp"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/preferences_new_password_confirm">
+
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:id="@+id/preferences_revoke_constraint"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:background="@color/white">
+
+            <TextView
+                style="@style/Text.BlackFont"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="비밀번호 수정 완료"
+                app:layout_constraintBottom_toBottomOf="@id/preferences_revoke_constraint"
+                app:layout_constraintLeft_toLeftOf="@id/preferences_revoke_constraint"
+                app:layout_constraintRight_toRightOf="@id/preferences_revoke_constraint"
+                app:layout_constraintTop_toTopOf="@id/preferences_revoke_constraint" />
+
+        </androidx.constraintlayout.widget.ConstraintLayout>
+    </androidx.cardview.widget.CardView>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
+
+
