--- a/app/src/main/res/layout/fragment_profile_tab.xml
+++ b/app/src/main/res/layout/fragment_profile_tab.xml
@@ -11,38 +11,9 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content" />
 
-    <androidx.cardview.widget.CardView
-        android:id="@+id/my_page_title_card"
-        android:layout_width="311.3dp"
-        android:layout_height="49.6dp"
-        android:layout_marginTop="35.2dp"
-        app:cardCornerRadius="25dp"
-        app:cardElevation="3.3dp"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/my_page_appbar">
-
-        <androidx.constraintlayout.widget.ConstraintLayout
-            android:id="@+id/my_page_title_constraint"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:background="@drawable/gradient_button_color">
-
-            <TextView
-                style="@style/Text.WhiteFont"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="마이페이지"
-                android:textSize="16.7sp"
-                app:layout_constraintBottom_toBottomOf="@id/my_page_title_constraint"
-                app:layout_constraintLeft_toLeftOf="@id/my_page_title_constraint"
-                app:layout_constraintRight_toRightOf="@id/my_page_title_constraint"
-                app:layout_constraintTop_toTopOf="@id/my_page_title_constraint" />
-        </androidx.constraintlayout.widget.ConstraintLayout>
-    </androidx.cardview.widget.CardView>
 
     <androidx.cardview.widget.CardView
-        android:id="@+id/my_page_myInfo_card"
+        android:id="@+id/profile_tap_my_info_card"
         android:layout_width="311.3dp"
         android:layout_height="31.7dp"
         android:layout_marginTop="16.9dp"
@@ -51,7 +22,7 @@
         app:cardElevation="2dp"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/my_page_title_card">
+        app:layout_constraintTop_toBottomOf="@id/my_page_appbar">
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:id="@+id/my_page_nickname_constraint"
@@ -61,7 +32,7 @@
 
             <TextView
                 android:id="@+id/my_page_myInfo"
-                style="@style/Text.MainColorFont"
+                style="@style/Text.BlackFont"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="내 정보"
@@ -73,7 +44,7 @@
 
             <TextView
                 android:id="@+id/my_page_nickname"
-                style="@style/Text.MainColorFont"
+                style="@style/Text.BlackFont"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="3dp"
@@ -86,7 +57,7 @@
 
     </androidx.cardview.widget.CardView>
     <androidx.cardview.widget.CardView
-        android:id="@+id/my_page_like_stock_card"
+        android:id="@+id/profile_tap_like_stock_card"
         android:layout_width="311.3dp"
         android:layout_height="31.7dp"
         android:layout_marginTop="16.9dp"
@@ -95,27 +66,28 @@
         app:cardElevation="2dp"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/my_page_myInfo_card">
+        app:layout_constraintTop_toBottomOf="@id/profile_tap_my_info_card">
 
         <androidx.constraintlayout.widget.ConstraintLayout
-            android:id="@+id/my_page_like_constraint"
+            android:id="@+id/profile_tap_like_constraint"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:background="@color/white">
 
             <TextView
-                style="@style/Text.MainColorFont"
+                style="@style/Text.BlackFont"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="관심정보 리스트"
-                app:layout_constraintBottom_toBottomOf="@id/my_page_like_constraint"
-                app:layout_constraintLeft_toLeftOf="@id/my_page_like_constraint"
-                app:layout_constraintRight_toRightOf="@id/my_page_like_constraint"
-                app:layout_constraintTop_toTopOf="@id/my_page_like_constraint" />
+                app:layout_constraintBottom_toBottomOf="@id/profile_tap_like_constraint"
+                app:layout_constraintLeft_toLeftOf="@id/profile_tap_like_constraint"
+                app:layout_constraintRight_toRightOf="@id/profile_tap_like_constraint"
+                app:layout_constraintTop_toTopOf="@id/profile_tap_like_constraint" />
 
         </androidx.constraintlayout.widget.ConstraintLayout>
 
     </androidx.cardview.widget.CardView>
+
     <androidx.cardview.widget.CardView
         android:id="@+id/my_page_notion_card"
         android:layout_width="311.3dp"
@@ -126,7 +98,7 @@
         app:cardElevation="2dp"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/my_page_like_stock_card">
+        app:layout_constraintTop_toBottomOf="@id/profile_tap_like_stock_card">
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:id="@+id/my_page_notion_constraint"
@@ -136,7 +108,7 @@
 
             <TextView
                 android:id="@+id/notion_button_tv"
-                style="@style/Text.MainColorFont"
+                style="@style/Text.BlackFont"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="알람정보 리스트"
@@ -144,6 +116,39 @@
                 app:layout_constraintLeft_toLeftOf="@id/my_page_notion_constraint"
                 app:layout_constraintRight_toRightOf="@id/my_page_notion_constraint"
                 app:layout_constraintTop_toTopOf="@id/my_page_notion_constraint" />
+
+        </androidx.constraintlayout.widget.ConstraintLayout>
+
+    </androidx.cardview.widget.CardView>
+
+    <androidx.cardview.widget.CardView
+        android:id="@+id/profile_tap_notion_setting_card"
+        android:layout_width="311.3dp"
+        android:layout_height="31.7dp"
+        android:layout_marginTop="16.9dp"
+        app:cardBackgroundColor="@color/white"
+        app:cardCornerRadius="15dp"
+        app:cardElevation="2dp"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/my_page_notion_card">
+
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:id="@+id/my_page_notion_constraint2"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:background="@color/white">
+
+            <TextView
+                android:id="@+id/notion_button_tv2"
+                style="@style/Text.BlackFont"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="알람설정"
+                app:layout_constraintBottom_toBottomOf="@id/my_page_notion_constraint2"
+                app:layout_constraintLeft_toLeftOf="@id/my_page_notion_constraint2"
+                app:layout_constraintRight_toRightOf="@id/my_page_notion_constraint2"
+                app:layout_constraintTop_toTopOf="@id/my_page_notion_constraint2" />
 
         </androidx.constraintlayout.widget.ConstraintLayout>
 
