--- a/app/src/main/res/layout/fragment_sign_up.xml
+++ b/app/src/main/res/layout/fragment_sign_up.xml
@@ -98,7 +98,7 @@
 
         <TextView
             android:id="@+id/terms_of_service_button"
-            android:layout_width="110.7dp"
+            android:layout_width="100.7dp"
             android:layout_height="44dp"
             android:layout_marginTop="17.64dp"
             android:background="@drawable/shape_button_round"
@@ -132,6 +132,7 @@
         <CheckBox
             android:id="@+id/terms_of_service_checkBox"
             android:layout_width="wrap_content"
+            android:buttonTint="@color/black"
             android:layout_height="wrap_content"
             android:layout_marginTop="25dp"
             app:layout_constraintHorizontal_chainStyle="packed"
