--- a/app/src/main/res/layout/fragment_valuation.xml
+++ b/app/src/main/res/layout/fragment_valuation.xml
@@ -10,6 +10,7 @@
         layout="@layout/appbar"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+
         app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
@@ -17,6 +18,7 @@
         android:layout_width="98.7dp"
         android:layout_height="31.7dp"
         android:layout_marginEnd="10dp"
+        android:layout_marginTop="10dp"
         android:background="@drawable/main_button_state"
         android:gravity="center"
         android:letterSpacing="-0.04"
@@ -36,6 +38,7 @@
         android:layout_marginEnd="10dp"
         android:background="@drawable/main_button_state"
         android:gravity="center"
+        android:layout_marginTop="10dp"
         android:letterSpacing="-0.04"
         android:text="게산기"
         android:textColor="@drawable/text_color_state"
@@ -52,6 +55,7 @@
         android:background="@drawable/main_button_state"
         android:gravity="center"
         android:letterSpacing="-0.04"
+        android:layout_marginTop="10dp"
         android:text="관심종목"
         android:textColor="@drawable/text_color_state"
         android:textSize="10sp"
