--- a/app/src/main/res/layout/fragment_search_password.xml
+++ b/app/src/main/res/layout/fragment_search_password.xml
@@ -74,7 +74,7 @@
 
 
         <TextView
-            android:id="@+id/sign_up_button"
+            android:id="@+id/search_password_send_button"
             android:layout_width="312dp"
             android:layout_height="45dp"
             android:layout_marginBottom="45dp"
