--- a/app/src/main/res/layout/fragment_valuation.xml
+++ b/app/src/main/res/layout/fragment_valuation.xml
@@ -40,7 +40,7 @@
         android:gravity="center"
         android:layout_marginTop="10dp"
         android:letterSpacing="-0.04"
-        android:text="게산기"
+        android:text="계산기"
         android:textColor="@drawable/text_color_state"
         android:textSize="10sp"
         android:textStyle="bold"
