--- a/app/src/main/res/layout/fragment_like_stock.xml
+++ b/app/src/main/res/layout/fragment_like_stock.xml
@@ -8,6 +8,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <TextView
+        style="@style/Text.BlackFont"
         android:id="@+id/like_stock_title"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -16,16 +17,18 @@
         android:text="관심 종목을 선택해주세요"
         />
     <TextView
+        style="@style/Text.BlackFont"
         android:id="@+id/like_stock_sub_title"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="5dp"
         app:layout_constraintTop_toBottomOf="@+id/like_stock_title"
         android:gravity="center"
-        android:hint="해당 종목에 대한 정보를 보여드립니다"
+        android:text="해당 종목에 대한 정보를 보여드립니다"
         />
 
     <EditText
+        android:textColorHint="@color/hint_color"
         android:id="@+id/like_stock_et_search"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -37,6 +40,7 @@
         app:layout_constraintTop_toBottomOf="@+id/like_stock_sub_title"
         />
     <TextView
+        style="@style/Text.BlackFont"
         android:id="@+id/like_stock_message"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -48,9 +52,10 @@
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/like_stock_recyclerview"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="0dp"
         android:overScrollMode="never"
         app:layout_constraintTop_toBottomOf="@+id/like_stock_message"
+        app:layout_constraintBottom_toBottomOf="parent"
         tools:layout_editor_absoluteX="10dp"
         tools:listitem="@layout/item_like_stock"
         />
