--- a/app/src/main/res/layout/item_like_stock.xml
+++ b/app/src/main/res/layout/item_like_stock.xml
@@ -3,6 +3,7 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:padding="10dp"
+    android:background="@color/white"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools">
 
@@ -11,12 +12,14 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         app:layout_constraintTop_toTopOf="parent"
+        style="@style/Text.BlackFont"
         tools:text="삼성전자"
         />
     <TextView
         android:id="@+id/like_stock_recycler_item_number"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        style="@style/Text.BlackFont"
         app:layout_constraintTop_toBottomOf="@id/like_stock_recycler_item_name"
         tools:text="005930"
         />
