--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -21,6 +21,12 @@
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintVertical_bias="0.1" />
 
+        <TextView
+            android:layout_width="411dp"
+            android:layout_height="731dp"
+            android:background="@color/black"
+            />
+
         <EditText
             android:id="@+id/et_Id"
             android:layout_width="300dp"
