--- a/app/src/main/res/layout/fragment_guidance.xml
+++ b/app/src/main/res/layout/fragment_guidance.xml
@@ -66,7 +66,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="31dp"
-                android:text="테이퍼링이 뭔데\n주식시장이 흔들리나요?"
+                android:text="같이가는\n가치투자"
                 android:textSize="16.7sp"
                 app:layout_constraintBottom_toBottomOf="@id/dail_report_first_const"
                 app:layout_constraintLeft_toLeftOf="@id/dail_report_first_const"
@@ -106,7 +106,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="31dp"
-                android:text="테이퍼링이 뭔데\n주식시장이 흔들리나요?"
+                android:text="실제 전문가는\n어떻게 투자할까요?"
                 android:textSize="16.7sp"
                 app:layout_constraintBottom_toBottomOf="@id/dail_report_second_const"
                 app:layout_constraintLeft_toLeftOf="@id/dail_report_second_const"
@@ -146,7 +146,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="31dp"
-                android:text="테이퍼링이 뭔데\n주식시장이 흔들리나요?"
+                android:text="너도 할 수 있어\n애널리스트!"
                 android:textSize="16.7sp"
                 app:layout_constraintBottom_toBottomOf="@id/dail_report_third_const"
                 app:layout_constraintLeft_toLeftOf="@id/dail_report_third_const"
@@ -226,7 +226,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="31dp"
-                android:text="테이퍼링이 뭔데\n주식시장이 흔들리나요?"
+                android:text="why 미글??"
                 android:textSize="16.7sp"
                 app:layout_constraintBottom_toBottomOf="@id/dail_report_fifth_const"
                 app:layout_constraintLeft_toLeftOf="@id/dail_report_fifth_const"
