--- a/app/src/main/res/layout/fragment_profile_tab.xml
+++ b/app/src/main/res/layout/fragment_profile_tab.xml
@@ -154,6 +154,16 @@
 
     </androidx.cardview.widget.CardView>
 
+    <Button
+        android:id="@+id/profile_tab_login_button"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="로그인"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        android:layout_margin="25dp"
+        />
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
 
