--- a/app/src/main/res/layout/fragment_sign_up.xml
+++ b/app/src/main/res/layout/fragment_sign_up.xml
@@ -57,6 +57,7 @@
             android:hint="닉네임 ( 제약조건 )"
             android:maxLines="1"
             android:paddingStart="10dp"
+            android:textColor="@color/black"
             android:textColorHint="@color/hint_color"
             android:textSize="13.3sp"
             app:layout_constraintLeft_toLeftOf="parent"
@@ -73,6 +74,7 @@
             android:inputType="textPassword"
             android:maxLines="1"
             android:paddingStart="10dp"
+            android:textColor="@color/black"
             android:textColorHint="@color/hint_color"
             android:textSize="13.3sp"
             app:layout_constraintLeft_toLeftOf="parent"
@@ -89,6 +91,7 @@
             android:inputType="textPassword"
             android:maxLines="1"
             android:paddingStart="10dp"
+            android:textColor="@color/black"
 
             android:textColorHint="@color/hint_color"
             android:textSize="13.3sp"
@@ -132,9 +135,9 @@
         <CheckBox
             android:id="@+id/terms_of_service_checkBox"
             android:layout_width="wrap_content"
-            android:buttonTint="@color/black"
             android:layout_height="wrap_content"
             android:layout_marginTop="25dp"
+            android:buttonTint="@color/black"
             app:layout_constraintHorizontal_chainStyle="packed"
             app:layout_constraintLeft_toLeftOf="@id/signup_constraintLayout"
             app:layout_constraintRight_toLeftOf="@id/terms_of_service_textView"
