--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/fragment_background">
@@ -58,9 +59,10 @@
                 app:layout_constraintTop_toBottomOf="@id/guide_title" />
 
             <ImageView
-                android:layout_width="100dp"
-                android:layout_height="100dp"
-                android:background="@drawable/carrot"
+                android:layout_width="101dp"
+                android:layout_height="93dp"
+                android:layout_marginRight="20dp"
+                android:background="@drawable/antgul_logo_2"
                 app:layout_constraintBottom_toBottomOf="@id/guide_constraint"
                 app:layout_constraintRight_toRightOf="@id/guide_constraint"
                 app:layout_constraintTop_toTopOf="@id/guide_constraint" />
