--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -49,6 +49,7 @@
             android:paddingStart="10dp"
             android:textColorHint="@color/hint_color"
             android:textSize="13.3sp"
+            android:textColor="@color/black"
             app:layout_constraintLeft_toLeftOf="@id/login_constraintLayout1"
             app:layout_constraintRight_toRightOf="@id/login_constraintLayout1"
             app:layout_constraintTop_toBottomOf="@id/login_title" />
@@ -64,6 +65,7 @@
             android:paddingStart="10dp"
             android:textColorHint="@color/hint_color"
             android:textSize="13.3sp"
+            android:textColor="@color/black"
             app:layout_constraintLeft_toLeftOf="@id/login_constraintLayout1"
             app:layout_constraintRight_toRightOf="@id/login_constraintLayout1"
             app:layout_constraintTop_toBottomOf="@id/et_email" />
